# cse2425-es-2025

./: .gitignore  README.md
debug/: tstprog.c  util.c
hashmap/: Makefile  README.md  gest-run.h  gest.c  gest.h  solution.c  test  test.c
robot/: CMakeLists.txt  Makefile  README.md  REPORT.md  flash.sh
robot-templates/pico_sdk/: pico_sdk.c
robot/robot-templates/pico_sdk/: pico_sdk.c
robot/snapshots/assignment1_pwm/: .clangd  CMakeLists.txt
robot/snapshots/assignment1_pwm/src/: main.c  motors_pwm.c  motors_pwm.h
robot/snapshots/assignment2_pio/: .clangd  CMakeLists.txt
robot/snapshots/assignment2_pio/src/: HCSR04.c  HCSR04.h  HCSR04.pio  main.c  motors_pwm.c  timers.c
robot/snapshots/assignment3_pid/: .clangd  CMakeLists.txt
robot/snapshots/assignment3_pid/src/: HCSR04.h  HCSR04.pio  line_follow.c  line_follow.h  main.c  motors_pwm.c  pid.c  timers.h
robot/snapshots/assignment4_obs/: .clangd  CMakeLists.txt
robot/snapshots/assignment4_obs/src/: B83609.h  HCSR04.c  HCSR04.h  line_follow.c  main.c  motors_pwm.c  multicore.h  obstacle_avoidance.c  obstacle_avoidance.h  pid.c  pid.h  timers.h
robot/snapshots/assignment5_dist/: .clangd  CMakeLists.txt
robot/snapshots/assignment5_dist/src/: B83609.c  B83609.h  line_follow.c  main.c  motors_pwm.c  motors_pwm.h  obstacle_avoidance.c  obstacle_avoidance.h  timers.c  timers.h
robot/src/: B83609.c  HCSR04.c  HCSR04.h  HCSR04.pio  TCRT5000.c  TCRT5000.h  line_follow.c  line_follow.h  main.c  motors_pwm.c  motors_pwm.h  multicore.c  obstacle_avoidance.c  timers.c  ultrasonic.c  ultrasonic.h  ultrasonic.pio
tmp/: README.md
tmp/pico_sdk/: CMakeLists.txt  pico_sdk.c
tmp/pico_sdk/.cache/clangd/index/: pico_sdk.c.6B8964CC1A63794A.idx
